# photo-gallery-share-django

./: .env.sample  .gitignore  Dockerfile  README.md  db.env.sample  docker-compose.yml  pyproject.toml
app/core/: settings.py  urls.py  views.py
app/gallery/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/templates/: base.html  index.html
app/templates/account/: email.html  email_confirm.html  email_confirm_sent.html  email_verification_sent.html  login.html  logout.html  password_change.html  password_change_done.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
app/templates/gallery/: album_detail.html  album_form.html  album_list.html  dashboard.html  photo_form.html  photo_list.html
app/templates/partials/: time.html
nginx/: nginx.conf
